# valentine

./: .gitignore  .gitmodules  README.md  rebuildSandbox.sh  valentine.cabal
src/: Valentine.hs
src/Valentine/: Parser.hs  QQ.hs
src/Valentine/Parser/: VDom.hs
src/Valentine/Parser/VDom/: Live.hs  VDOM.hs
test/: Main.hs
test/Valentine/: ParserSpec.hs  QQSpec.hs
