Name:                   valentine
Version:                0.0.1
Author:                 Scott <scottmurphy09@gmail.com>
Maintainer:             Scott <scottmurphy09@gmail.com>
License:                MIT
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Valentine
                        Valentine.QQ
                        Valentine.Parser
                        Valentine.Parser.VDom
                        Valentine.Parser.VDom.Live
--  Other-Modules:        
  Build-Depends:        base >= 4 && < 5
                      , template-haskell
                      , ghcjs-base
                      , containers
                      , text
                      , safe
                      , stm-notify
                      , trifecta
                      , parsers
                      , haskell-src-meta
                      , here
                      , live-vdom
                      , vector

test-suite test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  hs-source-dirs:   test, src
  main-is:          Main.hs
  build-depends:    base
                  , valentine
                  , lens
                  , template-haskell
                  , ghcjs-base
                  , containers
                  , text
                  , safe
                  , stm-notify
                  , trifecta
                  , parsers
                  , haskell-src-meta
                  , here
                  , live-vdom
                  , vector
                      
Source-Repository head
  Type:                 git
--  Location:
